# Crime-Detector

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/alerts/: __init__.py  dedupe.py  engine.py  formatter.py  telegram.py
app/anomalies/: __init__.py  cex_depth_compression.py  depth_asymmetry_shift.py  dex_liquidity_compression.py  engine.py  funding_oi_divergence.py  hyperliquid_liquidation_cluster.py  manipulable_structure.py  models.py  oi_build_up.py  perp_driven_pump.py  silent_oi_build.py  upbit_led_move.py  venue_specific.py
app/backtest/: evaluate_alerts.py  run_backtest.py
app/collectors/: __init__.py  base.py  binance.py  bybit.py  dex_context.py  dexscreener.py  hydromancer_liquidations.py  hydromancer_store.py  hyperliquid.py  market_data.py  okx.py  upbit.py
app/config/: exclusions.py  settings.py  thresholds.py  venues.py
app/dashboard/: __init__.py  api.py
app/db/: models.py  session.py
app/features/: build_features.py  ewma.py  hourly_changes.py  percentiles.py  rolling_windows.py  segmentation.py
app/orderbooks/: __init__.py  depth_calculator.py  snapshots.py
app/universe/: __init__.py  symbol_mapper.py  update_universe.py  venue_discovery.py
app/utils/: http.py  logging.py  rate_limit.py  time.py
app/workers/: run_role.py  scheduler.py
frontend/: index.html  package.json
tests/: test_depth_calculator.py  test_detectors.py  test_feature_statistics.py  test_formatter.py  test_hydromancer.py  test_new_detectors.py  test_percentiles.py  test_symbol_mapper.py
(+5 files in other folders)
