[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-anomaly-scanner"
version = "0.1.0"
description = "Local-first crypto market-structure anomaly scanner."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "asyncpg>=0.29.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "msgpack>=1.0.8",
  "orjson>=3.10.7",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "redis>=5.0.8",
  "sqlalchemy[asyncio]>=2.0.32",
  "tenacity>=9.0.0",
  "uvicorn[standard]>=0.30.6",
  "zstandard>=0.23.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.2"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

